# htmls-to-datasette

./: .gitignore  README.md  pyproject.toml  setup.cfg
docker/: Dockerfile
docker/htmlstore/: pyproject.toml
docker/volumes/config/: metadata.json
htmls_to_datasette/: __main__.py  cli.py
server/: metadata-binary.json  pyproject.toml
server/input/: Datasette_ An open source multi-tool for exploring and publishing data (9_25_2021 7_38_59 PM).html
server/plugins/: __init__.py
