[tool.poetry]
name = "htmls-to-datasette"
version = "0.1.1"
description = "Tool to index and serve HTML files. Powered by Datasette."
readme = "README.md"
authors = ["Pablo Lopez-Jamar <pablo.lopez.jamar@gmail.com>"]
license = "Apache License 2.0"
homepage = "https://github.com/pjamar/htmls-to-datasette"
repository = "https://github.com/pjamar/htmls-to-datasette"
include = [
  "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
sqlite-utils = "^3.17"
click = "^8.0.1"
rich = "^10.10.0"
html2text = "^2020.1.16"

[tool.poetry.scripts]
htmls-to-datasette = 'htmls_to_datasette.cli:cli'

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
