[tool.poetry]
name = "htmlstore"
version = "0.1.0"
description = "A project to serve HTML files that are searchable."
authors = ["Pablo Lopez-Jamar <pablo.lopez.jamar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
datasette = "^0.58.1"
datasette-media = "^0.5"
htmls-to-datasette = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
